small fixes on the scrollbars and SASS reset

--- a/front/src/sass/base/_normalization.scss
+++ b/front/src/sass/base/_normalization.scss
@@ -44,7 +44,7 @@
 
 
   body {
-    min-height: 150svh;
+    min-height: 100svh;
     height: 100%;
 
     background-color: var(--bg-primary);
@@ -217,7 +217,13 @@
     }
   }
 
-  *[draggable] {}
+  *[draggable] {
+    cursor: grab;
+
+    &:hover {
+      cursor: grabbing;
+    }
+  }
 
   // Reset for all the input types
   input {
